--- a/app/src/main/res/layout/fragment_lista_didatica.xml
+++ b/app/src/main/res/layout/fragment_lista_didatica.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/lista_ordenada"
+        android:id="@+id/lista_didatica"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         />
 
 </RelativeLayout>
