--- a/app/src/main/res/layout/item_conceito_subtitulo.xml
+++ b/app/src/main/res/layout/item_conceito_subtitulo.xml
@@ -6,9 +6,15 @@
     <TextView
         android:id="@+id/conceito_subtitulo"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingLeft="25dp"
+        android:layout_height="60dp"
+        android:paddingLeft="45dp"
+        android:paddingRight="15dp"
         android:gravity="center_vertical"
-        android:text="bla"/>
+        android:background="@color/colorBackground"
+        android:text="bla"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
+        />
 
 </LinearLayout>
