--- a/app/src/main/res/layout/item_conceito_titulo.xml
+++ b/app/src/main/res/layout/item_conceito_titulo.xml
@@ -3,12 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/conceito_titulo"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:paddingLeft="10dp"
+        android:layout_height="60dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:gravity="center_vertical"
-        android:text="bla"/>
+        android:text="bla"
+        android:textSize="15sp"
+        android:textColor="@color/colorPrimary"
+        android:background="@color/colorBackground"
+        android:textStyle="bold"
+        />
 
 </LinearLayout>
