Criando funcionalidade 'proximo conceito'.

--- a/app/src/main/res/layout/activity_conceito.xml
+++ b/app/src/main/res/layout/activity_conceito.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context="com.taisbatuira.mure.ConceitoActivity">
+        tools:context="com.taisbatuira.mure.activity.ConceitoActivity">
 
         <TextView
             android:id="@+id/titulo"
