Colocando funcionalidade 'conceito anterior'.

--- a/app/src/main/res/menu/menu_didatica.xml
+++ b/app/src/main/res/menu/menu_didatica.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        app:showAsAction="always"
-        android:title="próxima"
+        android:id="@+id/menu_anterior"
+        android:title="anterior"
+
+        />
+
+    <item
+        android:id="@+id/menu_proximo"
+        android:title="próximo"
+
         />
 
 </menu>
