Alterando versão do Banco de Dados

--- a/app/src/main/res/menu/menu_didatica.xml
+++ b/app/src/main/res/menu/menu_didatica.xml
@@ -4,13 +4,13 @@
 
     <item
         android:id="@+id/menu_anterior"
-        android:title="anterior"
+        android:title="Anterior"
 
         />
 
     <item
         android:id="@+id/menu_proximo"
-        android:title="próximo"
+        android:title="Próximo"
 
         />
 
